Fix mobile footer alignement

--- a/less/_components/footer.less
+++ b/less/_components/footer.less
@@ -57,6 +57,13 @@ footer#solstice-footer {
     }
   }
 
+  @media (max-width: @screen-xs-max) {
+    text-align: center;
+    .nav{
+      margin-left:0;
+    }
+  }
+
   li {
     padding-bottom: 0;
   }
