--- a/less/quicksilver/template.less
+++ b/less/quicksilver/template.less
@@ -314,12 +314,3 @@
     margin-top:-20px;
   }
 }
-
-footer#solstice-footer{
-   @media (max-width: @screen-xs-max) {
-     text-align: center;
-     .nav{
-       margin-left:0;
-     }
-   }
-}
